--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="intro" id="intro">
+<div id="intro-wrapper">
+    <div class="intro" id="intro">
   <div id="three-container"></div>
   <div class="glow-logo">
       <div class="logo">
@@ -14,7 +17,7 @@
       </div>
   </div>
   <div class="intro-text" id="intro-text-1">一個青年信徒實踐敬拜生命的平台</div>
-  <div class="intro-text" id="intro-text-2" style="opacity: 0;">
+  <div class="intro-text" id="intro-text-2">
     <div class="word-container">
       <div class="word">
         <span class="big-word">G</span>
@@ -48,7 +51,7 @@
       </div>
     </div>
   </div>
-  <div class="intro-text" id="intro-text-3"  style="opacity: 0;">
+  <div class="intro-text" id="intro-text-3">
     「Glow」全名為「Glow 敬拜青年事工」 是個推動青年信徒實踐敬拜生命的更新運動, 致力興起和建立一群基督的青年精兵。 我們願意看到青年人䇄立在這歪曲悖謬的世代, 成為不能隱藏的光, 熱心將敬拜的恩典轉化為關愛社區及世界的動力。
   </div>
   <div class="btn-group">
@@ -59,94 +62,139 @@
   <a class="a-left-bottom">．同心圓青年敬拜事工．</a>
   <a class="a-right-bottom">>青少年事工教牧同工專區</a>
 </div>
-<div class="header-space"></div>
+</div>
+<div class="header-space">
+    <header>
+        <div class="nav">
+            <div class="logo">
+                <span></span>
+            </div>
+            <nav>
+                <a id="nav1" href="#section-a">GLOW21</a>
+                <a id="nav2" href="#section-c">GLOW26</a>
+                <a id="nav3" href="#section-e">召命及異象</a>
+                <a id="nav4" href="#section-d">最新行動</a>
+                <a id="nav5" href="#section-f">加入我們</a>
+                <a id="nav6" href="#section-f">教牧專區</a>
+            </nav>
+        </div>
+    </header>
+</div>
 <div class="section section-a" id="section-a">
+    <div class="fixed-container">
+        <div id="section-content" class="a">
+            <span class="left-large-text">Glow 21</span>
+            <span class="left-small-text">(age16-21)</span>
+            <span class="divider"></span>
+            <span class="right-large-text">No regrets</span>
+            <span class="text-below">一個為不悔尋找召命的21歲以下青年人而設的平台！</span>
+        </div>
+    </div>
+</div>
+<div  class="section-footer">
+    <div class="footer"><a href>JOIN US</a>
+        <div class="social">
+            <a href="#"><span class="phone"></span></a>
+            <a href="#"><span class="facebook"></span></a>
+            <a href="#"><span class="instagram"></span></a>
+        </div>
+    </div>
 </div>
 <div class="section section-b" id="section-b">
+    <div class="fixed-container">
+        <div id="section-content" class="b">
+            <h1>Glow 21</h1>
+            <p>面對大專文化洪流的衝擊，<br />
+                隨波逐流、失去信仰的熱誠是你唯一的選擇？<br />
+                成為GLOW21的一分子，靠着耶穌基督與一班同路人精彩地過大專生活，<br/>為主夢想！</p>
+            <p>加入我們，當你21歲時回望，曾Glow！無悔，踏上尋找召命之旅。</p>
+        </div>
+    </div>
 </div>
 <div class="section section-c" id="section-c">
+    <div class="fixed-container">
+        <div id="section-content" class="c">
+            <span class="left-large-text">Glow 26</span>
+            <span class="left-small-text">(age21-26)</span>
+            <span class="divider"></span>
+            <span class="right-large-text">Not holding back</span>
+            <span class="text-below">一個強大支援要走進社會仍想為神燃燒26歲以下青年的平台！</span>
+        </div>
+    </div>
 </div>
 <div class="section section-d" id="section-d">
+    <div class="fixed-container">
+        <div id="section-content" class="d">
+            <h1>Glow 26</h1>
+            <p>可能你曾經滿腔熱誠，但經過社會的洗禮、工作的磨鍊，不知不覺又重
+                回世界所謂「成功」的軌道，信仰只能是週末的事。你安於現狀嗎？
+                成為Glow26的一分子，突破被生活「捱打」的狀態，與一班仍有夢想的同路人重拾信念與愛，義無反顧履行福音使命，肩負擁抱時代的責任！</p>
+                <p>當你26歲時回望，曾Glow！沒有保留，勇敢擁抱世代。</p>
+        </div>
+    </div>
 </div>
 <div class="section section-e" id="section-e">
+    <div class="fixed-container">
+        <div id="section-content" class="e">
+            <div class="slick">
+                <div class="content">
+                    <h1>Glow 的召命</h1>
+                    <p class="english">Go out into the world uncorrupted, a breath of fresh air in this squalid and polluted society. Provide people with a glimpse of good living and of the living God. Carry the light-giving Message into the night so I’ll have good cause to be proud of you on the day that Christ returns.
+    Phi 2:14-16, MSG</p>
+                    <p>好使你們無可指責，誠實無偽，在這彎曲悖謬的世代作上帝無瑕疵的兒女。
+                        你們在這世代中要像明光照耀，將生命的道顯明出來，使我在基督的日子得以誇耀我沒有白跑,也沒有徒勞。
+    腓二 15-16, 和合本</p>
+                </div>
+                <div class="content">
+                    <h1>Glow 的異象</h1>
+                    <div class="three-container">
+                        <p>1. 我們深信敬拜不單指音樂、亦不停留在表面，更是生命中時刻與主結連的關係。</p>
+                        <p>2. 從敬拜領受恩典後，轉化為關愛社區和世界的動力，</p>
+                        <p>3. 在這悖逆動亂世代，實踐不「離地」的信仰，活出具影響力的信徒生命。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="section section-f" id="section-f">
-</div>
-<div class="fixed-container">
-    <div id="section-content" class="a">
-        <span class="left-large-text">Glow 21</span>
-        <span class="left-small-text">(age16-21)</span>
-        <span class="divider"></span>
-        <span class="right-large-text">No regrets</span>
-        <span class="text-below">一個為不悔尋找召命的 21 歲以下青年人而設的平台!</span>
+    <div class="fixed-container">
+        <div id="section-content" class="e">
+            <h1>Glow 最新行動</h1>
+            <div class="four-container">
+                <div class="news">
+                    <div class="img"><img src="./img/new01.jpg"/></div>
+                    <h5>GLOW Live<br />青年加力月會</h5>
+                    <p>GLOW 重點公開每月聚會，透過熱熾的敬拜、表演藝術、多媒體等形式讓青年信徒經歷靈命復興，重燃我們愛主的心！</p>
+                    <a href="#" class="button">了解更多</a>
+                </div>
+                <div class="news">
+                    <div class="img"><img src="./img/new02.jpg"/></div>
+                    <h5>GLOW Live<br />青年加力月會</h5>
+                    <p>GLOW 重點公開每月聚會，透過熱熾的敬拜、表演藝術、多媒體等形式讓青年信徒經歷靈命復興，重燃我們愛主的心！</p>
+                    <a href="#" class="button">了解更多</a>
+                </div>
+                <div class="news">
+                    <div class="img"><img src="./img/new03.jpg"/></div>
+                    <h5>GLOW Live<br />青年加力月會</h5>
+                    <p>GLOW 重點公開每月聚會，透過熱熾的敬拜、表演藝術、多媒體等形式讓青年信徒經歷靈命復興，重燃我們愛主的心！</p>
+                    <a href="#" class="button">了解更多</a>
+                </div>
+                <div class="news">
+                    <div class="img"><img src="./img/new04.jpg"/></div>
+                    <h5>GLOW Live<br />青年加力月會</h5>
+                    <p>GLOW 重點公開每月聚會，透過熱熾的敬拜、表演藝術、多媒體等形式讓青年信徒經歷靈命復興，重燃我們愛主的心！</p>
+                    <a href="#" class="button">了解更多</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<div id="template-a" class="template">
-    <span class="left-large-text">Glow 21</span>
-    <span class="left-small-text">(age16-21)</span>
-    <span class="divider"></span>
-    <span class="right-large-text">No regrets</span>
-    <span class="text-below">一個為不悔尋找召命的 21 歲以下青年人而設的平台!</span>
-</div>
-<div id="template-b" class="template">
-    <span class="left-large-text">Glow 22</span>
-    <span class="left-small-text">(age16-22)</span>
-    <span class="divider"></span>
-    <span class="right-large-text">No regrets</span>
-    <span class="text-below">一個為不悔尋找召命的 22 歲以下青年人而設的平台!</span>
-</div>
-<div id="template-c" class="template">
-    <span class="left-large-text">Glow 22 C</span>
-    <span class="left-small-text">(age16-22)</span>
-    <span class="divider"></span>
-    <span class="right-large-text">No regrets</span>
-    <span class="text-below">一個為不悔尋找召命的 22 歲以下青年人而設的平台!</span>
-</div>
-<div id="template-d" class="template">
-    <span class="left-large-text">Glow 22 D</span>
-    <span class="left-small-text">(age16-22)</span>
-    <span class="divider"></span>
-    <span class="right-large-text">No regrets</span>
-    <span class="text-below">一個為不悔尋找召命的 22 歲以下青年人而設的平台!</span>
-</div>
-<div id="template-e" class="template">
-    <span class="left-large-text">Glow 22 E</span>
-    <span class="left-small-text">(age16-22)</span>
-    <span class="divider"></span>
-    <span class="right-large-text">No regrets</span>
-    <span class="text-below">一個為不悔尋找召命的 22 歲以下青年人而設的平台!</span>
-</div>
-<div id="template-f" class="template">
-    <span class="left-large-text">Glow 22 F</span>
-    <span class="left-small-text">(age16-22)</span>
-    <span class="divider"></span>
-    <span class="right-large-text">No regrets</span>
-    <span class="text-below">一個為不悔尋找召命的 22 歲以下青年人而設的平台!</span>
-</div>
-<header>
-  <div class="nav">
-  <div class="logo">
-    <span></span></div>
-  <nav>
-    <a class="first" href="#section-a">GLOW21</a>
-    <a href="#section-b">GLOW26</a>
-    <a href="#section-c">召命及異象</a>
-    <a href="#section-d">GLOW21</a>
-    <a href="#section-e">GLOW21</a>
-    <a href="#section-f">GLOW21</a>
-  </nav>
-</div>
-</header>
-<div class="footer"><a href>JOIN US</a>
-    <div class="social">
-        <a href="#"><span class="phone"></span></a>
-        <a href="#"><span class="facebook"></span></a>
-        <a href="#"><span class="instagram"></span></a>
-    </div>
-</div>
+
 <script src="https://use.typekit.net/xxe1ueb.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="lib/jquery.min.js"></script>
+<script src="lib/slick.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
